# bom-manager

./: .gitattributes  README.md  pyproject.toml
.git-crypt/keys/default/0/: 841274FA57399E56B8E89FEB8E9FBF1E7C9A5132.gpg
inventory_manager/: __main__.py  app.tcss  cache.py  cli.py  secrets.py  test.py  trace.py
inventory_manager/backend/: base.py  factories.py  sheets.py
inventory_manager/frontend/: auth.py  data_retriever.py  file_select.py  inventory_menu.py  loading_screen.py  main_menu.py  nocopy_sheet.py
inventory_manager/inventory/: inv.py  order.py
